# cookie

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  classification_report.txt  config.yaml  data.dvc  environment.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cml.yml  condechecks.yml  docker.yml  tests.yml
api_learning/: data_drift.py  iris_fastapi.py  main.py  try_requests.py
cloud_run/: rc.txt  sklearn_cloud_functions.py
conf/: config.yaml
conf/model/: model_conf.yaml
conf/sweep/: lr_sweep.yaml
conf/training/: training_conf.yaml
cookie/: __init__.py  predict_model.py  thunder.py  train_cml.py  train_model.py  visualize_model.py
cookie/data/: dataloader.py  make_dataset.py
cookie/models/: img_cls_handler.py  model.py  save_model.py  scripted_model.py
cookie/visualizations/: visualize.py
dockerfiles/: predict_model.dockerfile  rc.txt  train_model.dockerfile  vertex_ai.yaml
docs/: mkdocs.yaml
docs/source/: index.md
reports/: My report | fashion-mnist – Weights & Biases.html
reports/figures/: predictions.txt
tests/: test_data.py  test_model.py
